<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.smallrain.bluetooth.View.MainActivity">
    <item
        android:id="@+id/turn_on_bluetooth"
        android:title="@string/turnOn"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/turn_off_bluetooth"
        android:title="@string/turnOff"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/enable_visiblity"
        android:title="@string/visiblity"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/find_device"
        android:title="@string/find_device"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/bonded_device"
        android:title="@string/bonded_device"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/say_hello"
        android:title="@string/hello"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/say_hi"
        android:title="@string/hi"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>